# pyclasswizard

./: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  pyclasswizard-0.1.0.vsix  pyproject.toml  tsconfig.json
pyclasswizard/: __init__.py  cli.py  wizard.py
pyclasswizard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: classTreeProvider.ts  clwStore.ts  extension.ts  pythonParser.ts
tests/: test_wizard.py
